[gd_scene load_steps=5 format=3 uid="uid://bljsbbyn1c7h"]

[ext_resource type="Script" path="res://entities/stage2/orb_shot.gd" id="1_gtpra"]
[ext_resource type="Texture2D" uid="uid://c1gs5yel08u86" path="res://assets/sprites/Main_Bullet_1.png" id="1_pw4uf"]
[ext_resource type="AudioStream" uid="uid://bq2juodb8h3sq" path="res://assets/audio/sfx/Shooting_Bullet_V3.mp3" id="3_4uujo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b26q6"]
size = Vector2(16, 16)

[node name="OrbShot" type="Area2D"]
script = ExtResource("1_gtpra")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_b26q6")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_pw4uf")

[node name="ShootSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_4uujo")
volume_db = -15.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
